--- a/upload/admin/view/template/common/security.twig
+++ b/upload/admin/view/template/common/security.twig
@@ -70,13 +70,9 @@ $('#security').on('click', '#button-install', function() {
 $('#security').on('submit', '#form-storage', function(e) {
     e.preventDefault();
 
-    var element = this;
-
     $('#button-storage').button('loading');
 
     var storage = function(next) {
-        console.log(next);
-
         return $.ajax({
             url: next,
             dataType: 'json',
@@ -86,17 +82,17 @@ $('#security').on('submit', '#form-storage', function(e) {
                 $('.alert-dismissible').remove();
 
                 if (json['error']) {
-                    $('#alert').prepend('<div class="alert alert-danger alert-dismissible"><i class="fa-solid fa-circle-exclamation"></i> ' + json['error'] + ' <button type="button" class="btn-close" data-bs-dismiss="alert"></button></div>');
+                    $('#alert-storage').prepend('<div class="alert alert-danger alert-dismissible"><i class="fa-solid fa-circle-exclamation"></i> ' + json['error'] + ' <button type="button" class="btn-close" data-bs-dismiss="alert"></button></div>');
 
                     $('#button-storage').button('reset');
                 }
 
                 if (json['text']) {
-                    $('#alert').prepend('<div class="alert alert-success alert-dismissible"><i class="fa-solid fa-check-circle-circle"></i> ' + json['text'] + ' <button type="button" class="btn-close" data-bs-dismiss="alert"></button></div>');
+                    $('#alert-storage').prepend('<div class="alert alert-success alert-dismissible"><i class="fa-solid fa-check-circle-circle"></i> ' + json['text'] + ' <button type="button" class="btn-close" data-bs-dismiss="alert"></button></div>');
                 }
 
                 if (json['success']) {
-                    $('#alert').prepend('<div class="alert alert-success alert-dismissible"><i class="fa-solid fa-check-circle"></i> ' + json['success'] + ' <button type="button" class="btn-close" data-bs-dismiss="alert"></button></div>');
+                    $('#alert-storage').prepend('<div class="alert alert-success alert-dismissible"><i class="fa-solid fa-check-circle"></i> ' + json['success'] + ' <button type="button" class="btn-close" data-bs-dismiss="alert"></button></div>');
 
                     $('#button-storage').button('reset');
 
@@ -152,50 +148,46 @@ $('#security').on('click', '#button-storage-delete', function() {
 $('#security').on('submit', '#form-admin', function(e) {
     e.preventDefault();
 
-    var element = this;
+    var admin = function(next) {
+        $('#button-admin').button('loading');
 
-    $.ajax({
-        url: 'index.php?route=common/security.admin&user_token={{ user_token }}',
-        type: 'post',
-        data: $('#form-admin').serialize(),
-        dataType: 'json',
-        beforeSend: function() {
-            $('#button-admin').button('loading');
-        },
-        complete: function() {
-            $('#button-admin').button('reset');
-        },
-        contentType: 'application/x-www-form-urlencoded',
-        success: function(json) {
-            console.log(json);
+        return $.ajax({
+            url: next,
+            dataType: 'json',
+            success: function(json) {
+                console.log(json);
 
-            $('.alert-dismissible').remove();
+                $('.alert-dismissible').remove();
 
-            if (json['error']) {
-                $('#alert').prepend('<div class="alert alert-danger alert-dismissible"><i class="fa-solid fa-circle-exclamation"></i> ' + json['error'] + ' <button type="button" class="btn-close" data-bs-dismiss="alert"></button></div>');
+                if (json['redirect']) {
+                    location = json['redirect'];
+                }
+
+                if (json['error']) {
+                    $('#alert-admin').prepend('<div class="alert alert-danger alert-dismissible"><i class="fa-solid fa-circle-exclamation"></i> ' + json['error'] + ' <button type="button" class="btn-close" data-bs-dismiss="alert"></button></div>');
+                }
+
+                if (json['text']) {
+                    $('#alert-admin').prepend('<div class="alert alert-success alert-dismissible"><i class="fa-solid fa-check-circle-circle"></i> ' + json['text'] + ' <button type="button" class="btn-close" data-bs-dismiss="alert"></button></div>');
+                }
+
+                if (json['success']) {
+                    $('#alert-admin').prepend('<div class="alert alert-success alert-dismissible"><i class="fa-solid fa-check-circle"></i> ' + json['success'] + ' <button type="button" class="btn-close" data-bs-dismiss="alert"></button></div>');
+
+                    $('#button-refresh').trigger('click');
+                }
+
+                if (json['next']) {
+                    admin(json['next']);
+                }
+            },
+            error: function(xhr, ajaxOptions, thrownError) {
+                console.log(thrownError + "\r\n" + xhr.statusText + "\r\n" + xhr.responseText);
             }
+        });
+    };
 
-            if (json['success']) {
-                $('#alert').prepend('<div class="alert alert-success alert-dismissible"><i class="fa-solid fa-check-circle"></i> ' + json['success'] + ' <button type="button" class="btn-close" data-bs-dismiss="alert"></button></div>');
-
-                $('#button-refresh').trigger('click');
-
-
-                window.setTimeout(function() {
-                    if (json['redirect']) {
-                        location = json['redirect'];
-                    }
-
-                    $('#alert .alert-dismissible').fadeTo(3000, 0, function() {
-                        $(this).remove();
-                    });
-                }, 3000);
-            }
-        },
-        error: function(xhr, ajaxOptions, thrownError) {
-            console.log(thrownError + "\r\n" + xhr.statusText + "\r\n" + xhr.responseText);
-        }
-    });
+    admin('index.php?route=common/security.admin&user_token={{ user_token }}&name=' + encodeURIComponent($('#input-admin').val()));
 });
 
 $('#security').on('click', '#button-admin-delete', function() {
