--- a/upload/admin/view/template/common/security_list.twig
+++ b/upload/admin/view/template/common/security_list.twig
@@ -30,6 +30,7 @@
             <h2 class="accordion-header"><button type="button" data-bs-toggle="collapse" data-bs-target="#accordion-storage" class="accordion-button collapsed"><i class="fa-solid fa-folder me-1"></i> {{ text_storage }}</button></h2>
             <div id="accordion-storage" class="accordion-collapse collapse" data-bs-parent="#accordion">
               <div class="modal-body">
+                <div id="alert-storage"></div>
                 <form id="form-storage">
                   <p>{{ text_storage_description }}</p>
                   <div class="mb-3">
@@ -80,6 +81,7 @@
             <h2 class="accordion-header"><button type="button" data-bs-toggle="collapse" data-bs-target="#accordion-admin" class="accordion-button collapsed"><i class="fa-solid fa-folder me-1"></i> {{ text_admin }}</button></h2>
             <div id="accordion-admin" class="accordion-collapse collapse" data-bs-parent="#accordion">
               <div class="modal-body">
+                <div id="alert-admin"></div>
                 <form id="form-admin">
                   <p>{{ text_admin_description }}</p>
                   <div class="mb-3">
