--- a/upload/admin/view/template/common/security.twig
+++ b/upload/admin/view/template/common/security.twig
@@ -162,7 +162,9 @@ $('#security').on('submit', '#form-admin', function(e) {
                 $('.alert-dismissible').remove();
 
                 if (json['redirect']) {
-                    location = json['redirect'];
+                    setTimeout(function(redirect) {
+                        location = redirect;
+                    }, 3000, json['redirect']);
                 }
 
                 if (json['error']) {
