--- a/upload/admin/view/template/common/security.twig
+++ b/upload/admin/view/template/common/security.twig
@@ -94,9 +94,11 @@ $('#security').on('submit', '#form-storage', function(e) {
                 if (json['success']) {
                     $('#alert-storage').prepend('<div class="alert alert-success alert-dismissible"><i class="fa-solid fa-check-circle"></i> ' + json['success'] + ' <button type="button" class="btn-close" data-bs-dismiss="alert"></button></div>');
 
-                    $('#button-storage').button('reset');
+                    setTimeout(function() {
+                        $('#button-storage').button('reset');
 
-                    $('#button-refresh').trigger('click');
+                        $('#button-refresh').trigger('click');
+                    }, 3000);
                 }
 
                 if (json['next']) {
