--- a/upload/admin/view/template/common/security.twig
+++ b/upload/admin/view/template/common/security.twig
@@ -24,6 +24,8 @@ $('#button-refresh').on('click', function() {
 
             $('#security').html(html);
 
+            console.log($('#modal-security .accordion-item').length);
+
             if ($('#modal-security .accordion-item').length > 0) {
                 $('#modal-security').modal('show');
 
