--- a/upload/admin/view/template/design/seo_regex_form.twig
+++ b/upload/admin/view/template/design/seo_regex_form.twig
@@ -3,7 +3,7 @@
   <div class="page-header">
     <div class="container-fluid">
       <div class="float-end">
-        <button type="submit" form="form-seo-url" data-bs-toggle="tooltip" title="{{ button_save }}" class="btn btn-primary"><i class="fa-solid fa-floppy-disk"></i></button>
+        <button type="submit" form="form-seo-regex" data-bs-toggle="tooltip" title="{{ button_save }}" class="btn btn-primary"><i class="fa-solid fa-floppy-disk"></i></button>
         <a href="{{ back }}" data-bs-toggle="tooltip" title="{{ button_back }}" class="btn btn-light"><i class="fa-solid fa-reply"></i></a>
       </div>
       <h1>{{ heading_title }}</h1>
@@ -18,33 +18,40 @@
     <div class="card">
       <div class="card-header"><i class="fa-solid fa-pencil"></i> {{ text_form }}</div>
       <div class="card-body">
-        <form id="form-seo-url" action="{{ save }}" method="post" data-oc-toggle="ajax">
+        <form id="form-seo-regex" action="{{ save }}" method="post" data-oc-toggle="ajax">
           <div class="row mb-3">
-            <label for="input-query-match" class="col-sm-2 col-form-label">{{ entry_query_match }}</label>
+            <label for="input-key" class="col-sm-2 col-form-label">{{ entry_key }}</label>
             <div class="col-sm-10">
-              <input type="text" name="query_match" value="{{ query_match }}" placeholder="{{ entry_query_match }}" id="input-query-match" class="form-control" required/>
-              <div id="error-query-match" class="invalid-feedback"></div>
+              <input type="text" name="key" value="{{ key }}" placeholder="{{ entry_key }}" id="input-key" class="form-control" required/>
+              <div id="error-key" class="invalid-feedback"></div>
             </div>
           </div>
           <div class="row mb-3">
-            <label for="input-query-replace" class="col-sm-2 col-form-label">{{ entry_query_replace }}</label>
+            <label for="input-match" class="col-sm-2 col-form-label">{{ entry_match }}</label>
             <div class="col-sm-10">
-              <input type="text" name="query_replace" value="{{ query_replace }}" placeholder="{{ entry_query_replace }}" id="input-query-replace" class="form-control" required/>
-              <div id="error-query-replace" class="invalid-feedback"></div>
+              <input type="text" name="match" value="{{ match }}" placeholder="{{ entry_match }}" id="input-match" class="form-control" required/>
+              <div id="error-match" class="invalid-feedback"></div>
             </div>
           </div>
           <div class="row mb-3">
-            <label for="input-path-match" class="col-sm-2 col-form-label">{{ entry_keyword_match }}</label>
+            <label for="input-replace" class="col-sm-2 col-form-label">{{ entry_replace }}</label>
             <div class="col-sm-10">
-              <input type="text" name="keyword_match" value="{{ keyword_match }}" placeholder="{{ entry_keyword_match }}" id="input-path-match" class="form-control" required/>
-              <div id="error-path-match" class="invalid-feedback"></div>
+              <input type="text" name="replace" value="{{ replace }}" placeholder="{{ entry_replace }}" id="input-replace" class="form-control" required/>
+              <div id="error-replace" class="invalid-feedback"></div>
             </div>
           </div>
           <div class="row mb-3">
-            <label for="input-path-replace" class="col-sm-2 col-form-label">{{ entry_keyword_replace }}</label>
+            <label for="input-keyword" class="col-sm-2 col-form-label">{{ entry_keyword }}</label>
             <div class="col-sm-10">
-              <input type="text" name="keyword_replace" value="{{ keyword_replace }}" placeholder="{{ entry_keyword_replace }}" id="input-path-replace" class="form-control" required/>
-              <div id="error-path-replace" class="invalid-feedback"></div>
+              <input type="text" name="keyword" value="{{ keyword }}" placeholder="{{ entry_keyword }}" id="input-keyword" class="form-control" required/>
+              <div id="error-keyword" class="invalid-feedback"></div>
+            </div>
+          </div>
+          <div class="row mb-3">
+            <label for="input-value" class="col-sm-2 col-form-label">{{ entry_value }}</label>
+            <div class="col-sm-10">
+              <input type="text" name="value" value="{{ value }}" placeholder="{{ entry_value }}" id="input-value" class="form-control" required/>
+              <div id="error-value" class="invalid-feedback"></div>
             </div>
           </div>
           <div class="row mb-3">
