--- a/upload/admin/view/template/common/developer.twig
+++ b/upload/admin/view/template/common/developer.twig
@@ -18,22 +18,22 @@
             <tr>
               <td>{{ text_cache }}</td>
               <td></td>
-              <td class="text-end"><button type="button" value="cache" data-bs-toggle="tooltip" title="{{ button_refresh }}" class="btn btn-warning"><i class="fa-solid fa-rotate"></i></button></td>
+              <td class="text-end"><button type="button" value="cache" data-bs-toggle="tooltip" title="{{ button_clear }}" class="btn btn-warning"><i class="fa-solid fa-rotate"></i></button></td>
             </tr>
             <tr>
               <td>{{ text_theme }}</td>
               <td></td>
-              <td class="text-end"><button type="button" value="theme" data-bs-toggle="tooltip" title="{{ button_refresh }}" class="btn btn-warning"><i class="fa-solid fa-rotate"></i></button></td>
+              <td class="text-end"><button type="button" value="theme" data-bs-toggle="tooltip" title="{{ button_clear }}" class="btn btn-warning"><i class="fa-solid fa-rotate"></i></button></td>
             </tr>
             <tr>
               <td>{{ text_sass }}</td>
               <td><x-switch name="developer_sass" value="1" checked="{{ developer_sass }}" input-id="input-developer-sass" input-class="form-switch form-switch-lg"></x-switch></td>
-              <td class="text-end"><button type="button" value="sass" data-bs-toggle="tooltip" title="{{ button_refresh }}" class="btn btn-warning"><i class="fa-solid fa-rotate"></i></button></td>
+              <td class="text-end"><button type="button" value="sass" data-bs-toggle="tooltip" title="{{ button_clear }}" class="btn btn-warning"><i class="fa-solid fa-rotate"></i></button></td>
             </tr>
             <tr>
               <td>{{ text_vendor }}</td>
               <td></td>
-              <td class="text-end"><button type="button" value="vendor" data-bs-toggle="tooltip" title="{{ button_refresh }}" class="btn btn-warning"><i class="fa-solid fa-rotate"></i></button></td>
+              <td class="text-end"><button type="button" value="vendor" data-bs-toggle="tooltip" title="{{ button_clear }}" class="btn btn-warning"><i class="fa-solid fa-rotate"></i></button></td>
             </tr>
           </tbody>
         </table>
