--- a/upload/catalog/view/template/account/address_form.twig
+++ b/upload/catalog/view/template/account/address_form.twig
@@ -144,6 +144,7 @@
                 </div>
               </div>
             {% endif %}
+
             {% if custom_field.type == 'file' %}
               <div class="row mb-3{% if custom_field.required %} required{% endif %}">
                 <label class="col-sm-2 col-form-label">{{ custom_field.name }}</label>
@@ -156,6 +157,7 @@
                 </div>
               </div>
             {% endif %}
+
             {% if custom_field.type == 'date' %}
               <div class="row mb-3{% if custom_field.required %} required{% endif %}">
                 <label for="input-custom-field-{{ custom_field.custom_field_id }}" class="col-sm-2 col-form-label">{{ custom_field.name }}</label>
@@ -165,6 +167,7 @@
                 </div>
               </div>
             {% endif %}
+
             {% if custom_field.type == 'time' %}
               <div class="row mb-3{% if custom_field.required %} required{% endif %}">
                 <label for="input-custom-field-{{ custom_field.custom_field_id }}" class="col-sm-2 col-form-label">{{ custom_field.name }}</label>
@@ -174,6 +177,7 @@
                 </div>
               </div>
             {% endif %}
+
             {% if custom_field.type == 'datetime' %}
               <div class="row mb-3{% if custom_field.required %} required{% endif %}">
                 <label for="input-custom-field-{{ custom_field.custom_field_id }}" class="col-sm-2 col-form-label">{{ custom_field.name }}</label>
@@ -183,18 +187,23 @@
                 </div>
               </div>
             {% endif %}
+
           {% endfor %}
+
           <div class="row mb-3">
             <label class="col-sm-2 col-form-label">{{ entry_default }}</label>
             <div class="col-sm-10">
               <div class="form-check-inline">
-                <input type="radio" name="default" value="1" id="input-default-yes" class="form-check-input"{% if default %} checked{% endif %}/> <label for="input-default-yes" class="form-check-label">{{ text_yes }}</label>
+                <input type="radio" name="default" value="1" id="input-default-yes" class="form-check-input"{% if default %} checked{% endif %}/>
+                <label for="input-default-yes" class="form-check-label">{{ text_yes }}</label>
               </div>
               <div class="form-check-inline">
-                <input type="radio" name="default" value="0" id="input-default-no" class="form-check-input"{% if not default %} checked{% endif %}/> <label for="input-default-no" class="form-check-label">{{ text_no }}</label>
+                <input type="radio" name="default" value="0" id="input-default-no" class="form-check-input"{% if not default %} checked{% endif %}/>
+                <label for="input-default-no" class="form-check-label">{{ text_no }}</label>
               </div>
             </div>
           </div>
+
         </fieldset>
         <div class="row">
           <div class="col">
