--- a/upload/admin/view/template/common/developer.twig
+++ b/upload/admin/view/template/common/developer.twig
@@ -10,6 +10,11 @@
         <table class="table table-bordered">
           <tbody>
             <tr>
+              <td>{{ text_html }}<br/>
+                <span class="fw-light">{{ help_html }}</span></td>
+              <td class="text-end"><button type="button" value="html" data-bs-toggle="tooltip" title="{{ button_clear }}" class="btn btn-warning"><i class="fa-solid fa-rotate"></i></button></td>
+            </tr>
+            <tr>
               <td>{{ text_cache }}<br/>
                 <span class="fw-light">{{ help_cache }}</span></td>
               <td class="text-end"><button type="button" value="cache" data-bs-toggle="tooltip" title="{{ button_clear }}" class="btn btn-warning"><i class="fa-solid fa-rotate"></i></button></td>
