--- a/upload/admin/view/template/marketplace/task_list.twig
+++ b/upload/admin/view/template/marketplace/task_list.twig
@@ -65,6 +65,10 @@
             <label for="input-args-{{ task.task_id }}" class="form-label">{{ entry_args }}</label>
             <textarea rows="5" id="input-args-{{ task.task_id }}" class="form-control" readonly>{{ task.args }}</textarea>
           </div>
+          <div class="mb-3">
+            <label for="input-response-{{ task.task_id }}" class="form-label">{{ entry_response }}</label>
+            <textarea rows="5" id="input-response-{{ task.response }}" class="form-control" readonly>{{ task.response }}</textarea>
+          </div>
         </div>
       </div>
     </div>
