--- a/upload/admin/view/template/marketplace/task.twig
+++ b/upload/admin/view/template/marketplace/task.twig
@@ -62,20 +62,7 @@
       <div class="col col-lg-9 col-md-12">
         <div class="card">
           <div class="card-header"><i class="fa-solid fa-list"></i> {{ text_list }}</div>
-          <div class="card-body">
-            <ul class="nav nav-tabs">
-              <li class="nav-item"><a href="#tab-general" data-bs-toggle="tab" class="nav-link active">{{ tab_general }}</a></li>
-              <li class="nav-item"><a href="#tab-history" data-bs-toggle="tab" class="nav-link">{{ tab_history }}</a></li>
-            </ul>
-            <div class="tab-content">
-              <div id="tab-general" class="tab-pane active">
-                <div id="list">{{ list }}</div>
-              </div>
-              <div id="tab-history" class="tab-pane">
-                <div id="history">{{ history }}</div>
-              </div>
-            </div>
-          </div>
+          <div id="list" class="card-body">{{ list }}</div>
         </div>
       </div>
     </div>
@@ -86,12 +73,6 @@ $('#list').on('click', 'thead a, .pagination a', function(e) {
     e.preventDefault();
 
     $('#list').load(this.href);
-});
-
-$('#history').on('click', '.pagination a', function(e) {
-    e.preventDefault();
-
-    $('#history').load(this.href);
 });
 
 $('#form-filter').on('submit', function(e) {
@@ -195,10 +176,6 @@ $('#button-clear').on('click', function(e) {
             console.log(thrownError + "\r\n" + xhr.statusText + "\r\n" + xhr.responseText);
         }
     });
-});
-
-$('#button-refresh').on('click', function(e) {
-    $('#list').load('index.php?route=marketplace/task.list&user_token={{ user_token }}&' + $('#form-filter').serialize());
 });
 //--></script>
 {{ footer }}
