--- a/upload/admin/view/template/customer/customer_form.twig
+++ b/upload/admin/view/template/customer/customer_form.twig
@@ -34,7 +34,7 @@
           <div id="tab-general" class="tab-pane active">
             <form id="form-customer" action="{{ save }}" method="post">
               <fieldset>
-                <legend>{{ text_customer }}</legend>
+                <legend>{{ text_general }}</legend>
                 <div class="row mb-3">
                   <label for="input-store" class="col-sm-2 col-form-label">{{ entry_store }}</label>
                   <div class="col-sm-10">
@@ -55,6 +55,10 @@
                     </select>
                   </div>
                 </div>
+              </fieldset>
+
+              <fieldset>
+                <legend>{{ text_customer }}</legend>
                 <div class="row mb-3">
                   <label for="input-customer-group" class="col-sm-2 col-form-label">{{ entry_customer_group }}</label>
                   <div class="col-sm-10">
